# python-clean-hex

./: Dockerfile  README.md  docker-compose.yaml  easyp.yaml  main.py  pyproject.toml  requirements.txt
src/clients/: temporal_workflows.py
src/config/: database.py  kafka.py  settings.py  temporal.py
src/consumers/: kafka_consumer.py  outbox_consumer.py  transaction_consumer.py
src/controllers/: stock_controller.py
src/domain/: message.py  models.py  portfolio.py  repositories.py  transaction.py
src/domain/repositories/: message_repository.py  portfolio_repository.py
src/entrypoints/: api.py  consumer.py  workflow.py
src/infrastructure/config/: __init__.py  database.py  fastapi.py  logger.py  temporal.py
src/infrastructure/consumer/: message_consumer.py
src/infrastructure/messaging/: kafka_service.py
src/infrastructure/repositories/sql/: message_repository.py  portfolio_repository.py  transaction_repository.py
src/infrastructure/workflow/: transaction_workflow.py
src/producers/: kafka_producer.py
src/repositories/: postgres_repositories.py
src/usecases/: execute_transaction.py  get_transaction.py  get_user_transactions.py  stock_transaction.py
tests/integration/: test_api.py  test_temporal_workflow.py
tests/unit/domain/: test_models.py
tests/unit/usecases/: test_stock_transaction.py
